--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-countup": "^6.5.3",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.3.0",
