--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/poppins": "^5.2.5",
+    "aos": "^2.3.4",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
@@ -24,6 +26,7 @@
     "jwt-decode": "^4.0.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
+    "pdfjs-dist": "^4.10.38",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-bootstrap-daterangepicker": "^8.0.0",
@@ -36,6 +39,7 @@
     "react-icons": "^5.3.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-international-phone": "^4.5.0",
+    "react-pdf": "^9.2.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
